objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>WT_Campaign_LOB__c</fullName>
        <description>DBSFCRM-1494</description>
        <label>Campaign Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABL</fullName>
                </value>
                <value>
                    <fullName>Agricultural Lending</fullName>
                </value>
                <value>
                    <fullName>Business Administrator</fullName>
                </value>
                <value>
                    <fullName>Business Banking</fullName>
                </value>
                <value>
                    <fullName>CCPA</fullName>
                </value>
                <value>
                    <fullName>Charter Leadership</fullName>
                </value>
                <value>
                    <fullName>Commercial Support</fullName>
                </value>
                <value>
                    <fullName>Community Advantage</fullName>
                </value>
                <value>
                    <fullName>Community Banking</fullName>
                </value>
                <value>
                    <fullName>Community Impact</fullName>
                </value>
                <value>
                    <fullName>Complaint Management</fullName>
                </value>
                <value>
                    <fullName>Consumer Lending</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>CRE</fullName>
                </value>
                <value>
                    <fullName>Deposit Application</fullName>
                </value>
                <value>
                    <fullName>First Insurance</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Funds Group</fullName>
                </value>
                <value>
                    <fullName>Government Funds</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>IT Administrator</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>MAD - Managed Assets Division</fullName>
                </value>
                <value>
                    <fullName>Middle Market</fullName>
                </value>
                <value>
                    <fullName>MyHR</fullName>
                </value>
                <value>
                    <fullName>Professional Practice Group</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Support Role</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MSD Record ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Strategy__c</fullName>
        <description>DBSFCRM-1494</description>
        <label>Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attraction</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Customer Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>